--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "eslint-plugin-node-specifier",
   "version": "1.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/reggi/eslint-plugin-node-specifier"
+  },
   "exports": {
     ".": "./index.js"
   },
